--- a/.env.common
+++ b/.env.common
@@ -1,5 +1,5 @@
-BOT_URL=https://t.me/vcplayerbot
-PARENT_URL=https://t.me/sktechhub
-SUPPORT_GROUP=https://t.me/voicechatsupport
-GITHUB_REPO=https://github.com/kshubham506/vcplayerbot
+BOT_URL=https://t.me/TeslaMusicRoBot
+PARENT_URL=https://t.me/Warning_MadBoy_is_Back
+SUPPORT_GROUP=https://t.me/TeslaRobo_Chat
+GITHUB_REPO=https://github.com/madboy482/MusisBot-Beta
 ALLOWED_SONG_DURATION_IN_MIN=20
